Slighly reduced font size for create radio section on homepage to prevent title wrapping.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -476,7 +476,7 @@ h1 {
 
 .tabs_content .title {
     font-family: Arial;
-    font-size: 26px;
+    font-size: 24px;
     line-height: 34px;
     color: #00a5f8;
 }
